# zoo-wes-runner

./: .gitleaksignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
01_configuring_toil/: index.html
02_configuring_ades/: index.html
03_deploying_and_monitoring_jobs/: index.html
api/zoo_wes_runner/: index.html
api/zoo_wes_runner/base/: index.html
api/zoo_wes_runner/wes_runner/: index.html
configuration/: index.html
docs/: 01_configuring_toil.md  02_configuring_ades.md  03_deploying_and_monitoring_jobs.md  configuration.md  index.md  installation.md
docs/api/zoo_wes_runner/: base.md  index.md  wes_runner.md
docs/images/: ZOO-Project-DRU-SCHEMA1.odg
extras/: nginx.conf  toil-celery.service  toil-server.service  zoo-dru-values.yaml
extras/example/: app-package.cwl  params.yml
installation/: index.html
search/: search_index.json
started/: index.html
zoo_wes_runner/: __init__.py  base.py  wes_runner.py
